--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,23 @@
 body {
-    background: black;
     color: white;
+    min-height: 98dvh;
+    background: black;
+}
+
+/* Utility Classes */
+.stretch {
+    width: 100%;
+    height: 100%;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.centerText {
+    font-size: 45px;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
