--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,7 @@ body {
     color: white;
     min-height: 98dvh;
     background: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Utility Classes */
@@ -16,8 +17,27 @@ body {
     justify-content: center;
 }
 
+.spaceBetween {
+    justify-content: space-between;
+}
+
+.columns {
+    flex-direction: column;
+}
+
 .centerText {
-    font-size: 45px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+.largeText {
+    font-size: 45px;
+}
+
+section {
+    min-height: 15dvh;
+    background: green;
+}
+
+section:nth-child(odd) {
+    background: blue;
 }
